2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, MonoDevelop.Core.Gui/StockIcons.cs, Makefile.am,
	  icons/workspace-32.png, icons/workspace-16.png,
	  MonoDevelop.Core.Gui.addin.xml: Added workspace icons.
	* MonoDevelop.Core.Gui.Codons/DialogPanelCodon.cs: Made some extension node
	  attributes serializable.

2007-11-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Components/FileBrowser.cs: Make file scout icons
	  smaller.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Gui.Dialogs/WizardDialog.cs,
	  MonoDevelop.Core.Gui.Dialogs/AbstractWizardPanel.cs,
	  MonoDevelop.Core.Gui.Components/FileBrowser.cs,
	  MonoDevelop.Core.Gui/DispatchService.cs,
	  MonoDevelop.Core.Gui/ResourceService.cs,
	  MonoDevelop.Core.Gui.ProgressMonitoring/MessageDialogProgressMonitor.cs,
	  MonoDevelop.Core.Gui.ProgressMonitoring/BaseProgressMonitor.cs,
	  MonoDevelop.Core.Gui.ProgressMonitoring/MultiTaskDialogProgressMonitor.cs,
	  Freedesktop.RecentFiles/RecentFileStorage.cs: Track LoggingService API
	  changes.

2007-11-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.Components/FileBrowser.cs: Remove some frames.

2007-10-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, Makefile.am, icons/Icons.16x16.MiscFiles,
	  icons/Icons.16x16.TextFileIcon, icons/web-overlay-16.png,
	  MonoDevelop.Core.Gui.addin.xml: Registered menu size html file icon.
	  Updated text file icon.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.addin.xml: Bump MD version.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Gui.mdp, MonoDevelop.Core.Gui/StockIcons.cs, Makefile.am,
	  icons/Icons.32x32.CombineIcon, icons/Icons.16x16.NewCombineIcon.png,
	  icons/file-xml-32.png, icons/Icons.32x32.TextFileIcon,
	  icons/web-overlay-32.png, icons/Icons.32x32.EmptyProjectIcon,