@@ -1,3 +1,9 @@
+2007-11-20  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Core.Gui.Components/FileBrowser.cs: Log errors as well as
+	  reporting them to the user.
+	* Freedesktop.RecentFiles/RecentItem.cs: Use UTC for Unix timestamps.
+
 2007-11-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Core.Gui.mdp, MonoDevelop.Core.Gui/StockIcons.cs, Makefile.am,
